# mdspan

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  make_single_header.py  mdspan.hpp
.github/workflows/: cmake.yml  single-header.yml
benchmarks/: CMakeLists.txt  fill.hpp
benchmarks/copy/: copy_layout_stride.cpp
benchmarks/extents/: CMakeLists.txt  extents_perf.cpp
benchmarks/matvec/: CMakeLists.txt
benchmarks/matvec/cuda/: matvec_cuda.cu
benchmarks/matvec/openmp/: matvec_openmp.cpp
benchmarks/stencil/: stencil_3d.cpp
benchmarks/stencil/cuda/: Makefile  stencil_3d_cuda.cpp  stencil_3d_cuda.cu
benchmarks/stencil/openmp/: Makefile  stencil_3d_openmp.cpp
benchmarks/sum/: CMakeLists.txt  fill.hpp  sum.cpp  sum_3d_common.hpp  sum_3d_left.cpp  sum_3d_right.cpp  sum_submdspan_right.cpp  sum_subspan_right.cpp
benchmarks/sum/cuda/: sum_3d_cuda.cu
benchmarks/sum/openmp/: sum_3d_openmp.cpp
benchmarks/tiny_matrix_add/: CMakeLists.txt  tiny_matrix_add.cpp
benchmarks/tiny_matrix_add/openmp/: Makefile  tiny_matrix_add_openmp.cpp
cmake/: MDSpanConfig.cmake.in  metabench.cmake
cmake/googletest/: CMakeLists.txt.in
comp_bench/: CMakeLists.txt  cbench_submdspan.cpp.erb  cbench_subspan.cpp.erb
compilation_tests/: CMakeLists.txt  ctest_common.hpp  ctest_compressed_pair_layout.cpp  ctest_constexpr_dereference.cpp  ctest_constexpr_layouts.cpp  ctest_constexpr_submdspan.cpp  ctest_constexpr_subspan.cpp  ctest_constructor_sfinae.cpp  ctest_extents_ctors.cpp  ctest_extents_type_check.cpp  ctest_layout_convertible.cpp  ctest_layout_type_check.cpp  ctest_mdarray_type_check.cpp  ctest_mdspan_convertible.cpp  ctest_namespace_std.cpp  ctest_no_unique_address.cpp  ctest_standard_layout.cpp  ctest_trivially_copyable.cpp
examples/: CMakeLists.txt
examples/aligned_accessor/: CMakeLists.txt  aligned_accessor.cpp
examples/dot_product/: dot_product.cpp
examples/for_each_extents/: CMakeLists.txt  for_each_extents.cpp  for_each_extents_no_ranges.cpp
examples/godbolt_starter/: godbolt_starter.cpp
examples/layout_padded/: CMakeLists.txt  layout_padded.cpp
examples/mdarray_ctors/: CMakeLists.txt  mdarray_ctors.cpp
examples/pitched_allocation/: CMakeLists.txt  pitched_allocation.cpp
examples/restrict_accessor/: CMakeLists.txt  restrict_accessor.cpp
examples/submdspan/: CMakeLists.txt  submdspan.cpp
examples/subspan/: CMakeLists.txt  subspan.cpp
examples/tiled_layout/: simple_tiled_layout.cpp
include/: mdspan.hpp
include/experimental/: mdarray  mdarray.hpp  mdspan
include/experimental/__p0009_bits/: accessor_basic.hpp  all_type.hpp  array_workaround.hpp  basic_mdspan.hpp  compressed_pair.hpp  config.hpp  default_accessor.hpp  depend_on_instantiation.hpp  dynamic_extent.hpp  extents.hpp  extents2.hpp  fixed_layout_impl.hpp  layout_left.hpp  layout_right.hpp  layout_stride.hpp  macros.hpp  maybe_static_value.hpp  mdspan.hpp  mixed_size_storage.hpp  no_unique_address.hpp  standard_layout_static_array.hpp  static_array.hpp  submdspan.hpp  subspan.hpp  trait_backports.hpp  type_list.hpp  utility.hpp
include/experimental/__p1684_bits/: mdarray.hpp
include/experimental/__p2630_bits/: strided_slice.hpp  submdspan.hpp  submdspan_extents.hpp  submdspan_mapping.hpp
include/experimental/__p2642_bits/: layout_padded.hpp  layout_padded_fwd.hpp
include/experimental/bits/: accessor_basic.hpp  all_type.hpp  basic_mdspan.hpp  config.hpp  dynamic_extent.hpp  extents.hpp  fixed_layout_impl.hpp  layout_left.hpp  layout_right.hpp  layout_stride.hpp  macros.hpp  mixed_size_storage.hpp  subspan.hpp  trait_backports.hpp
include/mdspan/: mdarray.hpp  mdspan.hpp
include/mdspan/experimental/: mdarray.hpp
scripts/snl/: build-all  config-all  config-one  config-one-cuda  gtest-clang-patch  gtest-hip-patch  gtest-nvhpc-patch
tests/: CMakeLists.txt  foo_customizations.hpp  offload_utils.hpp  test_alternate_precondition_violation_handler.cpp  test_contiguous_layouts.cpp  test_conversion.cpp  test_ctors.cpp  test_element_access.cpp  test_exhaustive_layouts.cpp  test_extents.cpp  test_layout_ctors.cpp  test_layout_padded.cpp  test_layout_padded_left.cpp  test_layout_padded_right.cpp  test_layout_stride.cpp  test_macros.cpp  test_mdarray_ctors.cpp  test_mdarray_to_mdspan.cpp  test_mdspan_at.cpp  test_mdspan_conversion.cpp  test_mdspan_ctors.cpp  test_mdspan_size.cpp  test_mdspan_swap.cpp  test_submdspan.cpp  test_submdspan_static_slice.cpp
tests/libcxx-backports/: CMakeLists.txt  CustomTestLayouts.h  MinimalElementType.h  llvm_test_macros.h
tests/libcxx-backports/default_accessor/: CMakeLists.txt  default_accessor.access.pass.cpp  default_accessor.ctor.conversion.pass.cpp  default_accessor.ctor.default.pass.cpp  default_accessor.element_type.verify.cpp  default_accessor.offset.pass.cpp  default_accessor.types.pass.cpp
tests/libcxx-backports/extents/: CMakeLists.txt  CtorTestCombinations.h  comparison.pass.cpp  conversion.pass.cpp  ctad.pass.cpp  ctor_default.pass.cpp  ctor_from_array.pass.cpp  ctor_from_integral.pass.cpp  ctor_from_span.pass.cpp  dextents.pass.cpp  obs_static.pass.cpp  types.pass.cpp
tests/libcxx-backports/layout_left/: CMakeLists.txt  layout_left.comparison.pass.cpp  layout_left.ctor.default.pass.cpp  layout_left.ctor.extents.pass.cpp  layout_left.ctor.layout_right.pass.cpp  layout_left.ctor.layout_stride.pass.cpp  layout_left.ctor.mapping.pass.cpp  layout_left.extents.verify.cpp  layout_left.index_operator.pass.cpp  layout_left.properties.pass.cpp  layout_left.required_span_size.pass.cpp  layout_left.static_requirements.pass.cpp  layout_left.stride.pass.cpp
tests/libcxx-backports/layout_right/: CMakeLists.txt  layout_right.comparison.pass.cpp  layout_right.ctor.default.pass.cpp  layout_right.ctor.extents.pass.cpp  layout_right.ctor.layout_left.pass.cpp  layout_right.ctor.layout_stride.pass.cpp  layout_right.ctor.mapping.pass.cpp  layout_right.extents.verify.cpp  layout_right.index_operator.pass.cpp  layout_right.properties.pass.cpp  layout_right.required_span_size.pass.cpp  layout_right.static_requirements.pass.cpp  layout_right.stride.pass.cpp
(+37 files in other folders)
